future target added

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </div>
           <div class="next-target">
             <div class="next">
-              <div class="next-image">
+              <div class="next-image-1">
                 <img src="./images/react.png" alt="" />
               </div>
               <div class="next-content">
@@ -193,7 +193,7 @@
               </div>
             </div>
             <div class="next">
-              <div class="next-image">
+              <div class="next-image-2">
                 <img src="./images/nodejs.png" alt="" />
               </div>
               <div class="next-content">
@@ -207,7 +207,7 @@
               </div>
             </div>
             <div class="next">
-              <div class="next-image">
+              <div class="next-image-3">
                 <img src="./images/mongodb.png" alt="" />
               </div>
               <div class="next-content">
