--- a/index.html
+++ b/index.html
@@ -223,6 +223,42 @@
           </div>
         </div>
       </section>
+      <!-- support section starts -->
+      <section class="support-section">
+        <div class="container support">
+          <div class="section-content support-content">
+            <h2 class="section-heading support-heading">I need Support</h2>
+            <p class="section-description support-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <form class="form-container">
+            <input type="text" placeholder="Suggest me any feedback for me" />
+            <button>Submit</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <!-- main section ends -->
+    <!-- footer section starts -->
+    <footer class="footer-section">
+      <div class="container footer">
+        <div class="footer-content">
+          <p class="footer-description">An Open Commitment by Awlad Hossain</p>
+        </div>
+        <div class="footer-icon">
+          <a href="#" target="_blank"
+            ><img src="./images/facebook.png" alt=""
+          /></a>
+          <a href="#" target="_blank"
+            ><img src="./images/github.png" alt=""
+          /></a>
+          <a href="#" target="_blank"
+            ><img src="./images/linkedin-icon 1.png" alt=""
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
